--- a/templates/users/user/login.phtml
+++ b/templates/users/user/login.phtml
@@ -7,5 +7,6 @@
         <label for="password">Password</label>
         <input type="password" name="password" id="password">
     </fieldset>
+    <p id="error"></p>
     <input type="submit" name="login" id="login" value="Login">
 </form>
