--- a/templates/users/layout.phtml
+++ b/templates/users/layout.phtml
@@ -19,6 +19,6 @@
             require 'partials/_footer.phtml';
         ?>
 
-        <script type="module" src="/res04-projet-soutenance/assets/js/index.js"></script>
+        <!-- <script type="module" src="/res04-projet-soutenance/assets/js/index.js"></script> -->
     </body>
 </html>
