--- a/templates/admin/layout.phtml
+++ b/templates/admin/layout.phtml
@@ -10,5 +10,7 @@
         require 'partials/_header.phtml';
         require $template;
     ?>
+
+    <script type="module" src="/res04-projet-soutenance/assets/js/index.js"></script>
 </body>
 </html>
