--- a/templates/users/layout.phtml
+++ b/templates/users/layout.phtml
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="title" content="Farming Companion">
+        <meta name="description" content="A tracker to a Stardew Valley game">
+        <meta name="author" content="Marie">
         <!-- <link href="assets/styles/scss/style.css" rel="stylesheet"> -->
         <title>Farming Companion</title>
     </head>
@@ -19,6 +22,6 @@
             require 'partials/_footer.phtml';
         ?>
 
-        <!-- <script type="module" src="/res04-projet-soutenance/assets/js/index.js"></script> -->
+        <script type="module" src="/res04-projet-soutenance/assets/js/index.js"></script>
     </body>
 </html>
