--- a/templates/users/villagers/partials/_planning1.phtml
+++ b/templates/users/villagers/partials/_planning1.phtml
@@ -1,11 +1,12 @@
-<section>
-    <h3>Schedule</h3>
-    <p>
-        <?php
-            foreach($_SESSION['planning']->getSchedule() as $key => $schedules)
-            {
-                echo $key. ' ' .$schedules;
-            }
-        ?>
-    </p>
-</section>
+<h3 class="title"><button>Schedule</button></h3>
+<table class="events">
+    <?php
+        foreach($_SESSION['planning']->getSchedule() as $key => $schedules)
+        {
+            echo '<tr>
+                    <td>'.$key.'</td>
+                    <td>'.$schedules.'</td>
+                  </tr>';
+        }
+    ?>
+</table>
