--- a/templates/users/villagers/partials/_planning3.phtml
+++ b/templates/users/villagers/partials/_planning3.phtml
@@ -1,22 +1,20 @@
-<section>
-    <h3>Schedule</h3>
-    <table>
-        <?php
-            foreach($_SESSION['planning']->getSchedule() as $key => $schedules)
+<h3 class="title"><button>Schedule</button></h3>
+<table class="events">
+    <?php
+        foreach($_SESSION['planning']->getSchedule() as $key => $schedules)
+        {
+            echo '<tr><th>'.$key.'</th></tr>';
+            foreach($schedules as $keys => $schedule)
             {
-                echo '<tr><th>'.$key.'</th></tr>';
-                foreach($schedules as $keys => $schedule)
+                echo '<tr><td>'.$keys.'</td></tr>';
+                foreach($schedule as $keyz => $planning)
                 {
-                    echo '<tr><td>'.$keys.'</td></tr>';
-                    foreach($schedule as $keyz => $planning)
+                    foreach($planning as $key => $plan)
                     {
-                        foreach($planning as $key => $plan)
-                        {
-                            echo '<tr><td>'.$key. ': ' .$plan.'</td></tr>';
-                        }
+                        echo '<tr><td>'.$key. ': ' .$plan.'</td></tr>';
                     }
                 }
             }
-        ?>
-    </table>
-</section>
+        }
+    ?>
+</table>
