Changed some things in the game_partials

--- a/templates/users/user/game_partials/_bundles.phtml
+++ b/templates/users/user/game_partials/_bundles.phtml
@@ -2,8 +2,8 @@
     if($key === "bundles")
     {
 ?>
-<h3>Bundles of the Community Center</h3>
-<ul>
+<h3 class="title"><button>Bundles of the Community Center</button></h3>
+<ul class="events">
     <?php
         foreach($player as $bundle)
         {
