--- a/templates/users/user/game_partials/_locations.phtml
+++ b/templates/users/user/game_partials/_locations.phtml
@@ -2,8 +2,8 @@
     if($key === "locations")
     {
 ?>
-<h3>Locations discovered</h3>
-<dl>
+<h3 class="title"><button>Locations discovered</button></h3>
+<dl class="events">
     <?php
         foreach($player as $locations)
         {
