--- a/templates/users/user/game_partials/_possessedItems.phtml
+++ b/templates/users/user/game_partials/_possessedItems.phtml
@@ -8,7 +8,7 @@
     <?php
         foreach($player as $items)
         {
-            echo "<li>".$items->getName()."</li>";
+            echo "<li>".$items->getAmount().' '.$items->getName()."</li>";
         }
     }
     ?>
