--- a/templates/users/user/game_partials/_relationships.phtml
+++ b/templates/users/user/game_partials/_relationships.phtml
@@ -2,8 +2,8 @@
     if($key === "relationships")
     {
 ?>
-<h3>Relationships</h3>
-<dl>
+<h3 class="title"><button>Relationships</button></h3>
+<dl class="events">
     <?php
         foreach($player as $relationship)
         {
