--- a/templates/users/villagers/partials/_planning2.phtml
+++ b/templates/users/villagers/partials/_planning2.phtml
@@ -1,17 +1,17 @@
 <h3 class="title"><button>Schedule</button></h3>
-<p class="events">
+<table class="events">
     <?php
         foreach($_SESSION['planning']->getSchedule() as $key => $schedules)
         {
-            echo $key;
+            echo '<tr><th>'.$key.'</th></tr>';
             foreach($schedules as $clé => $schedule)
             {
                 // echo $keys;
                 foreach($schedule as $keyz => $planning)
                 {
-                    echo $keyz. ' ' .$planning;
+                    echo '<tr><td>'.$keyz. ' ' .$planning.'</td></tr>';
                 }
             }
         }
     ?>
-</p>
+</table>
