--- a/templates/users/user/game_partials/_museumItems.phtml
+++ b/templates/users/user/game_partials/_museumItems.phtml
@@ -2,55 +2,57 @@
     if($key === "items")
     {
 ?>
-<h3>Artifacts</h3>
-<h4>Donated to the museum</h4> 
-<ul>
-    <?php
-        foreach($player as $museum)
-        {
-            if($museum->getHas() ===  true)
+<h3 class="title"><button>Artifacts</button></h3>
+<article class="events">
+    <h4>Donated to the museum</h4> 
+    <ul>
+        <?php
+            foreach($player as $museum)
             {
-    ?>
-                <?php
-                foreach($data['itemsPictures'] as $item)
+                if($museum->getHas() ===  true)
                 {
-                    if($item->getName() === $museum->getName())
-                    {
-                ?>
-                <li>
-                    <img src="/res04-projet-soutenance/<?=$item->getPicture()->getUrl();?>" alt="<?=$item->getPicture()->getAlt();?>">
-                    <p><?=$museum->getName();?></p>
-                </li>
+        ?>
                     <?php
+                    foreach($data['itemsPictures'] as $item)
+                    {
+                        if($item->getName() === $museum->getName())
+                        {
+                    ?>
+                    <li>
+                        <img src="/res04-projet-soutenance/<?=$item->getPicture()->getUrl();?>" alt="<?=$item->getPicture()->getAlt();?>">
+                        <p><?=$museum->getName();?></p>
+                    </li>
+                        <?php
+                        }
+                    }
+                }
+            }
+        ?>
+    </ul>
+    <h4>Not found yet</h4>
+    <ul>
+        <?php
+            foreach($player as $museum)
+            {
+                if($museum->getHas() ===  false)
+                {
+                    ?>
+                    <?php
+                    foreach($data['itemsPictures'] as $item)
+                    {
+                        if($item->getName() === $museum->getName())
+                        {
+                    ?>
+                    <li>
+                        <img src="/res04-projet-soutenance/<?=$item->getPicture()->getUrl();?>" alt="<?=$item->getPicture()->getAlt();?>">
+                        <p><?=$museum->getName();?></p>
+                    </li>
+                        <?php
+                        }
                     }
                 }
             }
         }
-    ?>
-</ul>
-<h4>Not found yet</h4>
-<ul>
-    <?php
-        foreach($player as $museum)
-        {
-            if($museum->getHas() ===  false)
-            {
-                ?>
-                <?php
-                foreach($data['itemsPictures'] as $item)
-                {
-                    if($item->getName() === $museum->getName())
-                    {
-                ?>
-                <li>
-                    <img src="/res04-projet-soutenance/<?=$item->getPicture()->getUrl();?>" alt="<?=$item->getPicture()->getAlt();?>">
-                    <p><?=$museum->getName();?></p>
-                </li>
-                    <?php
-                    }
-                }
-            }
-        }
-    }
-    ?>
-</ul>
+        ?>
+    </ul>
+</article>
