--- a/templates/users/layout.phtml
+++ b/templates/users/layout.phtml
@@ -6,7 +6,7 @@
         <meta name="title" content="Farming Companion">
         <meta name="description" content="A tracker to a Stardew Valley game">
         <meta name="author" content="Marie">
-        <!-- <link href="assets/styles/scss/style.css" rel="stylesheet"> -->
+        <!-- <link href="assets/styles/css/style.css" rel="stylesheet"> -->
         <title>Farming Companion</title>
     </head>
     <body>
