--- a/templates/users/user/game_partials/_relationships.phtml
+++ b/templates/users/user/game_partials/_relationships.phtml
@@ -7,9 +7,13 @@
     <?php
         foreach($player as $relationship)
         {
-            echo 
-            "<dt>".$relationship->getVillager()->getName()."</dt>
-                <dd>".intval($relationship->getLevel() / 250). " hearts out of 10.</dd>";
+    ?>
+            <dt>
+                <img src="/res04-projet-soutenance/<?=$relationship->getVillager()->getPicture()->getUrl();?>" alt="<?=$relationship->getVillager()->getPicture()->getAlt();?>">
+                <a href='/res04-projet-soutenance/villagers/<?= $relationship->getVillager()->getId();?>'><?=$relationship->getVillager()->getName();?></a>
+            </dt>
+            <dd><?=intval($relationship->getLevel() / 250);?> hearts out of 10.</dd>
+    <?php
         }
     ?>
 </dl>
