Added the edit for the admin account, and added a search input on the villagers, and fixed the registerform and loginform validator

--- a/templates/admin/partials/_header.phtml
+++ b/templates/admin/partials/_header.phtml
@@ -7,6 +7,7 @@
             <li><a href="/res04-projet-soutenance/admin/all-users">All users</a></li>
             <li><a href="/res04-projet-soutenance/admin/all-saved-games">All saved games</a></li>
             <li><a href="/res04-projet-soutenance/admin/statistics">Statistics</a></li>
+            <li><a href="/res04-projet-soutenance/admin/edit">Edit admin account</a></li>
         </ul>
     </nav>
     <?php
