--- a/templates/users/user/login.phtml
+++ b/templates/users/user/login.phtml
@@ -1,4 +1,4 @@
-<form method="POST" action="/res04-projet-soutenance/login">
+<form method="POST" action="/res04-projet-soutenance/login" id="login-form">
     <fieldset>
         <label for="username">Username</label>
         <input type="text" name="username" id="username">
