--- a/templates/admin/dashboard/dashboard.phtml
+++ b/templates/admin/dashboard/dashboard.phtml
@@ -1,4 +1,6 @@
-<h2>Hello <?=$_SESSION['admin']->getUsername();?></h2>
+<?php $admin = $data['admin']; ?>
+
+<h2>Hello <?=$admin->getUsername();?></h2>
 
 <?php
     require 'templates/admin/data/picture.phtml';
