Beginning the scss

--- a/assets/styles/scss/_vars.scss
+++ b/assets/styles/scss/_vars.scss
@@ -1,5 +1,5 @@
-$green : #1E6B64;
-$background : #D1D1D1;
-$purple : #B981AE;
-$yellow : #E1BA1E;
+$green : #054919;
+$background : #F6E0AC;
+$blue : #1D3B94;
+$orange : #E3740B;
 $font-size-default : 1em;
