--- a/templates/users/layout.phtml
+++ b/templates/users/layout.phtml
@@ -6,6 +6,9 @@
         <meta name="title" content="Farming Companion">
         <meta name="description" content="A tracker to a Stardew Valley game">
         <meta name="author" content="Marie">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Exo+2:wght@300&display=swap" rel="stylesheet">
         <!-- <link href="assets/styles/css/style.css" rel="stylesheet"> -->
         <title>Farming Companion</title>
     </head>
