--- a/templates/users/partials/_header.phtml
+++ b/templates/users/partials/_header.phtml
@@ -26,7 +26,7 @@
         {
     ?>
     <form method="POST" action="/res04-projet-soutenance/logout">
-        <input type="submit" name="logout" id="logout" value="logout">
+        <input type="submit" name="logout" id="logout" value="Logout">
     </form>
     <?php
         }
