--- a/assets/styles/scss/_vars.scss
+++ b/assets/styles/scss/_vars.scss
@@ -1,5 +1,9 @@
-$green : #054919;
-$background : #F6E0AC;
-$blue : #1D3B94;
-$orange : #E3740B;
-$font-size-default : 1em;
+$green : #0CC09E;
+$background : #FAFAFA;
+$blue : #4361EE;
+$pink : #D61E92;
+$text-color : #0C092B;
+$font-size-default : 1.6em;
+
+$title-font : "Chakra Petch", sans-serif;
+$text-font : "Inconsolata", sans-serif;
