--- a/templates/users/partials/_header.phtml
+++ b/templates/users/partials/_header.phtml
@@ -1,5 +1,5 @@
 <header>
-    <h1>Farming Companion</h1>
+    <h1><img src="assets/images/logo.png" alt="Logo of Farming Companion"></h1>
     <nav>
         <ul>
             <li><a href="/res04-projet-soutenance/">Homepage</a></li>
