--- a/templates/users/layout.phtml
+++ b/templates/users/layout.phtml
@@ -8,8 +8,8 @@
         <meta name="author" content="Marie">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Exo+2:wght@300&display=swap" rel="stylesheet">
-        <!-- <link href="assets/styles/css/style.css" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600&family=Inconsolata&display=swap" rel="stylesheet">
+        <link href="assets/styles/scss/style.css" rel="stylesheet">
         <title>Farming Companion</title>
     </head>
     <body>
