Continuing the scss

--- a/assets/styles/scss/_vars.scss
+++ b/assets/styles/scss/_vars.scss
@@ -3,7 +3,7 @@ $background : #FAFAFA;
 $blue : #4361EE;
 $pink : #D61E92;
 $text-color : #0C092B;
-$font-size-default : 1.6em;
+$font-size-default : 1rem;
 
 $title-font : "Chakra Petch", sans-serif;
 $text-font : "Inconsolata", sans-serif;
