--- a/assets/styles/scss/partials/_header.scss
+++ b/assets/styles/scss/partials/_header.scss
@@ -1,7 +1,7 @@
 header {
     display:flex;
     justify-content:space-between;
-    max-width:1100px;
+    max-width: 100vw;
     margin: 0 auto;
 
     h1 {
@@ -20,10 +20,12 @@ header {
                 margin:0 2rem;
 
                 a {
-                    background-color: $blue;
+                    font-size: 1.1rem;
                     color: $background;
+                    background-color: $blue;
                     text-decoration: none;
-                    padding: 0.5rem 1rem;
+                    padding: .8rem 1.2rem;
+                    clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
                 }
             }
         }
