--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -1,7 +1,7 @@
 header {
   display: flex;
   justify-content: space-between;
-  max-width: 1100px;
+  max-width: 100vw;
   margin: 0 auto;
 }
 header h1 {
@@ -19,18 +19,21 @@ header nav ul li {
   margin: 0 2rem;
 }
 header nav ul li a {
-  background-color: #4361EE;
+  font-size: 1.1rem;
   color: #FAFAFA;
+  background-color: #4361EE;
   text-decoration: none;
-  padding: 0.5rem 1rem;
+  padding: 0.8rem 1.2rem;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 16px;
 }
 html body {
   font-family: "Inconsolata", sans-serif;
-  font-size: 1.6em;
+  font-size: 1rem;
   background-color: #FAFAFA;
   padding: 0;
   margin: 0;
