--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -18,5 +18,9 @@ html {
             list-style: none;
             padding: 0;
         }
+
+        h1, h2, h3, h4 {
+            font-family: $title-font;
+        }
     }
 }
