--- a/assets/styles/scss/partials/_header.scss
+++ b/assets/styles/scss/partials/_header.scss
@@ -25,7 +25,8 @@ header {
                     background-color: $blue;
                     text-decoration: none;
                     padding: .8rem 1.2rem;
-                    clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+                    clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
+                                    100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
                 }
             }
         }
