--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -28,6 +28,40 @@ header nav ul li a {
           clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
 }
 
+.search {
+  display: block;
+  margin: 0.6rem auto;
+}
+
+.villagers ul {
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.villagers ul li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem 1.2rem;
+  transition: transform 0.3s ease;
+}
+.villagers ul li img {
+  padding-top: 0.6rem;
+  padding: 0 0.6rem;
+  background-color: #0CC09E;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 100%, 0 100%);
+          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 100%, 0 100%);
+}
+.villagers ul li a {
+  text-decoration: none;
+  color: #0C092B;
+  margin-top: 0.2rem;
+}
+.villagers ul li:hover {
+  transform: scale(1.15);
+}
+
 html {
   font-size: 16px;
 }
@@ -39,10 +73,18 @@ html body {
   margin: 0;
   box-sizing: border-box;
 }
+html body main {
+  max-width: 80vw;
+  margin: 0 auto;
+}
 html body ul {
   list-style: none;
   padding: 0;
 }
 html body h1, html body h2, html body h3, html body h4 {
   font-family: "Chakra Petch", sans-serif;
+}
+html body h2 {
+  font-size: 1.8rem;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
