--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'partials/header';
 @import 'partials/footer';
+@import 'partials/villagers';
 
 
 html {
@@ -14,6 +15,11 @@ html {
         margin : 0;
         box-sizing: border-box;
 
+        main {
+            max-width: 80vw;
+            margin: 0 auto;
+        }
+
         ul {
             list-style: none;
             padding: 0;
@@ -21,6 +27,11 @@ html {
 
         h1, h2, h3, h4 {
             font-family: $title-font;
+        }
+
+        h2 {
+            font-size: 1.8rem;
+            text-align: center;
         }
     }
 }
