--- a/assets/styles/scss/_villagers.scss
+++ b/assets/styles/scss/_villagers.scss
@@ -1,6 +1,22 @@
+/**** CSS of index Villagers ****/
+
 .search {
     display: block;
-    margin: .6rem auto;
+    margin: .8rem auto;
+    border: none;
+    padding: 0.5rem .4rem;
+    background-color: $blue;
+
+    &::placeholder {
+        color : $background;
+        font-family: $text-font;
+    }
+
+    &:focus {
+        outline: none;
+        font-family: $text-color;
+        color: $background;
+    }
 }
 
 .villagers {
@@ -22,7 +38,7 @@
                 padding-top: .6rem;
                 padding: 0 .6rem;
                 background-color: $green;
-                clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 100%, 0 100%);
+                clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
             }
 
             a {
