--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -28,9 +28,26 @@ header nav ul li a {
           clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
 }
 
+/**** CSS of index Villagers ****/
 .search {
   display: block;
-  margin: 0.6rem auto;
+  margin: 0.8rem auto;
+  border: none;
+  padding: 0.5rem 0.4rem;
+  background-color: #4361EE;
+}
+.search::-moz-placeholder {
+  color: #FAFAFA;
+  font-family: "Inconsolata", sans-serif;
+}
+.search::placeholder {
+  color: #FAFAFA;
+  font-family: "Inconsolata", sans-serif;
+}
+.search:focus {
+  outline: none;
+  font-family: #0C092B;
+  color: #FAFAFA;
 }
 
 .villagers ul {
@@ -50,8 +67,8 @@ header nav ul li a {
   padding-top: 0.6rem;
   padding: 0 0.6rem;
   background-color: #0CC09E;
-  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 100%, 0 100%);
-          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+          clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
 }
 .villagers ul li a {
   text-decoration: none;
@@ -60,6 +77,24 @@ header nav ul li a {
 }
 .villagers ul li:hover {
   transform: scale(1.15);
+}
+
+.villager-picture {
+  padding-top: 0.6rem;
+  padding: 0 0.6rem;
+  background-color: #0CC09E;
+  -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+          clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+}
+
+.villager-events .title button {
+  border: none;
+  background-color: #4361EE;
+  padding: 0.5rem 0.7rem;
+  font-family: "Inconsolata", sans-serif;
+  color: #FAFAFA;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
 }
 
 html {
@@ -85,6 +120,6 @@ html body h1, html body h2, html body h3, html body h4 {
   font-family: "Chakra Petch", sans-serif;
 }
 html body h2 {
-  font-size: 1.8rem;
+  font-size: 2rem;
   text-align: center;
 }/*# sourceMappingURL=style.css.map */
