--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -79,22 +79,53 @@ header nav ul li a {
   transform: scale(1.15);
 }
 
-.villager-picture {
+.single-villager {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 10rem repeat(3, auto);
+}
+.single-villager .villager-picture {
+  grid-area: 1/2/2/3;
+  justify-self: self-end;
+  align-self: center;
+  width: 10rem;
   padding-top: 0.6rem;
   padding: 0 0.6rem;
   background-color: #0CC09E;
   -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
 }
-
-.villager-events .title button {
+.single-villager .villager-general {
+  grid-area: 1/1/2/2;
+}
+.single-villager .title button {
   border: none;
   background-color: #4361EE;
-  padding: 0.5rem 0.7rem;
+  padding: 0.6rem 0.8rem;
   font-family: "Inconsolata", sans-serif;
   color: #FAFAFA;
+  font-size: 1.05rem;
   -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
           clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+  cursor: pointer;
+}
+.single-villager .title button.button-focus {
+  background-color: #D61E92;
+  font-weight: bolder;
+  -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+          clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+}
+.single-villager .villager-events {
+  grid-area: 2/1/3/3;
+}
+.single-villager .villager-events .events tr th {
+  width: 8rem;
+}
+.single-villager .gifts {
+  grid-area: 3/1/4/3;
+}
+.single-villager .planning {
+  grid-area: 4/1/5/3;
 }
 
 html {
@@ -109,7 +140,7 @@ html body {
   box-sizing: border-box;
 }
 html body main {
-  max-width: 80vw;
+  max-width: 70vw;
   margin: 0 auto;
 }
 html body ul {
