--- a/assets/styles/scss/_villager.scss
+++ b/assets/styles/scss/_villager.scss
@@ -16,6 +16,7 @@
     
     .villager-general {
         grid-area: 1/1/2/2;
+        align-self: center;
     }
 
     .title {
@@ -32,7 +33,7 @@
             cursor: pointer;
             
             &.button-focus {
-                background-color: $pink;
+                // background-color: $pink;
                 font-weight: bolder;
                 clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
             }
