--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -97,6 +97,7 @@ header nav ul li a {
 }
 .single-villager .villager-general {
   grid-area: 1/1/2/2;
+  align-self: center;
 }
 .single-villager .title button {
   border: none;
@@ -110,7 +111,6 @@ header nav ul li a {
   cursor: pointer;
 }
 .single-villager .title button.button-focus {
-  background-color: #D61E92;
   font-weight: bolder;
   -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
