--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -128,6 +128,57 @@ header nav ul li a {
   grid-area: 4/1/5/3;
 }
 
+.admin-header {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: 20% 80%;
+  grid-column-gap: 2rem;
+  background-color: #4361EE;
+  width: 100%;
+}
+.admin-header h1 {
+  grid-area: 1/1/2/2;
+  padding: 2rem 1rem;
+  align-self: center;
+  text-align: center;
+}
+.admin-header form {
+  grid-area: 1/2/2/3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1rem;
+}
+.admin-header nav {
+  grid-area: 2/1/3/3;
+  align-items: start;
+  justify-content: center;
+}
+.admin-header nav ul {
+  flex-direction: column;
+  align-items: center;
+}
+.admin-header nav ul li {
+  margin: 2rem 0;
+}
+.admin-header nav ul li a {
+  background-color: #FAFAFA;
+  color: #4361EE;
+  font-weight: bolder;
+}
+
+.admin-layout {
+  display: grid;
+  grid-template-columns: 20vw 80vw;
+  height: 100vh;
+}
+.admin-layout .admin-header {
+  grid-column: 1/2;
+}
+.admin-layout main {
+  grid-column: 2/3;
+}
+
 html {
   font-size: 16px;
 }
@@ -149,6 +200,7 @@ html body ul {
 }
 html body h1, html body h2, html body h3, html body h4 {
   font-family: "Chakra Petch", sans-serif;
+  margin: 0;
 }
 html body h2 {
   font-size: 2rem;
