--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -132,15 +132,17 @@ header nav ul li a {
   display: grid;
   grid-template-columns: repeat(2, auto);
   grid-template-rows: 20% 80%;
-  grid-column-gap: 2rem;
+  grid-column-gap: 1.5rem;
   background-color: #4361EE;
   width: 100%;
+  box-shadow: 0.3rem 0px 0px 0px rgba(67, 97, 238, 0.6), 0.6rem 0px 0px 0px rgba(67, 97, 238, 0.4), 0.9rem 0px 0px 0px rgba(67, 97, 238, 0.2);
 }
 .admin-header h1 {
   grid-area: 1/1/2/2;
   padding: 2rem 1rem;
   align-self: center;
   text-align: center;
+  color: #FAFAFA;
 }
 .admin-header form {
   grid-area: 1/2/2/3;
@@ -148,6 +150,14 @@ header nav ul li a {
   justify-content: center;
   align-items: center;
   padding: 0 1rem;
+}
+.admin-header form input {
+  border: none;
+  background-color: #FAFAFA;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+  color: #4361EE;
+  padding: 0.5rem 1rem;
 }
 .admin-header nav {
   grid-area: 2/1/3/3;
@@ -177,6 +187,35 @@ header nav ul li a {
 }
 .admin-layout main {
   grid-column: 2/3;
+  width: 100%;
+}
+.admin-layout main h2 {
+  padding: 2rem 0;
+}
+.admin-layout main .add-picture h3 {
+  margin: 2rem 0;
+  font-size: 1.4rem;
+}
+.admin-layout main .add-picture form {
+  display: flex;
+}
+.admin-layout main .add-picture form label {
+  cursor: pointer;
+  border: 1px solid #D61E92;
+  padding: 0.5rem 1rem;
+  background-color: rgba(214, 30, 146, 0.2);
+}
+.admin-layout main .add-picture form input[type=file] {
+  display: none;
+}
+.admin-layout main .add-picture form input[type=submit] {
+  border: 1px solid #0CC09E;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  font-family: "Inconsolata", sans-serif;
+  font-size: 1rem;
+  background-color: #0CC09E;
+  font-weight: bolder;
 }
 
 html {
